--- a/segmentify/index.html
+++ b/segmentify/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
         <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
